Prepare v0.1.12 release
